Minor Bug Fix: Can't see button on tablet devices

--- a/style.css
+++ b/style.css
@@ -437,7 +437,7 @@ body, html {
 .github-section {
     margin-top: auto;
     padding-top: 25px;
-    margin-bottom: 20px;
+    margin-bottom: 60px;
     border-top: 2px solid rgba(255, 255, 255, 0.1);
     background: transparent;
 }
